--- a/shortlisted.html
+++ b/shortlisted.html
@@ -66,7 +66,7 @@
         <i class="fab footer-icon fa-facebook-f"></i>
         <i class="fab footer-icon fa-instagram"></i>
         <i class="fas footer-icon fa-envelope"></i>
-        <p class="footer-p">© Copyright 2020 Hackathon <br>Shreshth Agarwal <br> Sparsh Kakkar<br> Vatsal Gupta</p>
+        <p class="footer-p">© Copyright 2020 Hackathon <br>Shreshth Agarwal</p>
 
       </footer>
     </div>
